# esp32-s3-rust-axum-example

./: Cargo.toml
src/: main.rs  wifi.rs
