[package]
name = "esp32axum"
version = "0.0.1"
authors = ["Gábor Gyebnár <korteur@gmail.com>"]
edition = "2021"

[dependencies]
panic-halt = "1.0.0"
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["http1", "json"] }
axum-macros = "0.5.0"
heapless = "0.8.0"
embedded-hal = "1"
embedded-svc = { version = "0.28.1", features = ["experimental"] }
esp-idf-sys = { version = "0.36.1", features = ["binstart"] }
esp-idf-svc = { version = "0.51.0", features = ["alloc", "experimental"] }
esp-idf-hal = "0.45.2"
log = "0.4.27"
serde = "1"
serde_json = "1"
tokio = { version = "1.39.3", features = ["rt", "net", "io-util", "macros"] }

[build-dependencies]
build-data = "0.3.3"
embuild = "0.33.0"
anyhow = "1.0.98"

[profile.release]
debug = false
opt-level = "s"
#lto = "fat"
strip = true
panic = "abort"

[profile.dev]
debug = true
opt-level = 2
lto = "off"

[package.metadata.espflash]
partition_table = "./partitions.csv"
